trendings in favorites

--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -71,19 +71,22 @@
         </div>
 
         <!--Trending-->
-        <div class="trending">
+        <div class="trending__header">
             <h3>Trending:</h3>
             <h4>Reactions, Entertainment, Sports, Stickers, Artists</h4>
         </div>
 
         <!--Trending and slider-->
-        <section class="trending__gifs">
-            <h2 id="title__margin">Trending GIFOS</h2>
-            <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
-            <div class="slide__container" id="gif__container">
-                <button onclick="sliderMovement(-1)" class="button__back">&#60;</button>
-                <button onclick="sliderMovement(1)" class="button__forward">&#62;</button>
         
+        <section class="trending">
+            <div class="trending__gifs">
+                <h2 id="title__margin">Trending GIFOS</h2>
+                <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
+            </div>
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+            </div>
+        </div>  
     </main>
     
     <!--footer-->
@@ -102,11 +105,6 @@
       <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>
     -->
     </footer>
-    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="js/darkmode.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/copyright.js"></script>
-    <script src="js/footer.js"></script>
 </body>
 </html>
