--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <section class="trending">
             <div class="trending__gifs">
-                <h2 id="title__margin">Trending GIFOS</h2>
+                <h2 id="title__trending">Trending GIFOS</h2>
                 <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
             </div>
             <!-- Slideshow container -->
