--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -38,13 +38,13 @@
         <section id="section-favoritos" class="galeria-favoritos"></section>
         <section id="favoritos_empty" class="sin-favoritos">
             <div class="fav-empty-container">
-                <img src="assets/icon-mis-gifos-sin-contenido.svg" alt="Favoritos sin contenido">
-                <h2>"¡Guarda tu primer GIFO en Favoritos
+                <img id="icon-fav-sin-contenido" src="assets/icon-fav-sin-contenido.svg" alt="Favoritos sin contenido">
+                <h2 id="default-msg">"¡Guarda tu primer GIFO en Favoritos <br>
                     para que se muestre aquí!"</h2>
             </div>
         </section>
 
-        <!--Popup-->
+        <!--Popup
         <div class="overlay" id="overlay">
             <div class="popup">
                 <img class="close-popup" id="close_popup" src="assets/close.svg" alt="Close">
@@ -68,7 +68,7 @@
                     </div>
                 </section>
             </div>
-        </div>
+        </div>-->
 
         <!--Trending-->
         <div class="trending__header">
@@ -80,7 +80,7 @@
         
         <section class="trending">
             <div class="trending__gifs">
-                <h2 id="title__margin">Trending GIFOS</h2>
+                <h2 id="title__trending">Trending GIFOS</h2>
                 <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
             </div>
             <!-- Slideshow container -->
