--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -28,16 +28,16 @@
             </label>
         </div>
         <div class="title-favoritos">
-            <img src="assets/icon-favoritos.svg" alt="">
+            <img src="assets/icon-favoritos.svg" alt="Icon Favoritos">
             <h1>Favoritos</h1>
         </div>
     </header>
     <main>
 
         <!--Favorites-->
-        <section id="section-favoritos" class="galeria-favoritos"></section>
-        <section id="favoritos_empty" class="sin-favoritos">
-            <div class="fav-empty-container">
+        <section id="section-fav-mygifs" class="galery"></section>
+        <section id="fav-mygifs_empty" class="no-fav-mygifs">
+            <div class="fav-mygifs-empty-container">
                 <img id="icon-fav-sin-contenido" src="assets/icon-fav-sin-contenido.svg" alt="Favoritos sin contenido">
                 <h2 id="default-msg">"¡Guarda tu primer GIFO en Favoritos <br>
                     para que se muestre aquí!"</h2>
@@ -83,6 +83,7 @@
                 <h2 id="title__trending">Trending GIFOS</h2>
                 <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
             </div>
+            
             <!-- Slideshow container -->
             <div class="slideshow-container">
             </div>
