--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -31,76 +31,79 @@
     </header>
 
     <!--Main-->
+        <section class="camera-display">
+            <!--Camera Icon-->
+            <div class="camera-container">
+                <div class="tapes-cam-container">
+                    <div class="tapes-container">
+                        <img id="tape-animation1" src="assets/element_cinta1.svg" alt="Cinta 1">
+                        <img id="tape-animation2" src="assets/element_cinta2.svg" alt="Cinta 2">
+                    </div>
+                    <img  class="camera_img" src="assets/element-camara.svg" alt="Camara">
+                </div>
 
-    <!--Camera-->
-    <section class="display-section">
-        <div class="camera-container">
-            <div class="cintas-container">
-                <img id="cinta-animada1" src="assets/element_cinta1.svg" alt="Cinta 1">
-                <img id="cinta-animada2" src="assets/element_cinta2.svg" alt="Cinta 2">
-            </div>
-            <div class="camara-luz-container">
-                <div class="camera">
-                    <img id="camara_img" src="assets/element-camara.svg" alt="Camara">
-                </div>
-                <div class="luz">
-                    <img id="luz-animada" src="assets/element-luz-camara.svg" alt="Luz">
-                </div>
-            </div>
-        </div>
-
-        <!--Recording-->
-        <div class="number-container">
-            <div class="video-container">
-                <div class="load-overlay">
-                    <img src="assets/loader.svg" alt="Loader">
-                    <h3>Estamos subiendo tu GIFO</h3>
-                </div>
-                <div class="checkload-overlay">
-                    <div class="btn-load-container">
-                        <button><img src="assets/icon-download.svg" alt="Download"></button>
-                        <button><img src="assets/icon-link.svg" alt="Link"></button>
-                    </div>
-                    <img src="assets/check.svg" alt="Check">
-                    <h3>GIFO subido con exito</h3>
-                </div>
-                <video id="video_gif" class="gif-recorder" src="#"></video>
-                <div class="create-gifo-container">
-                    <div class="text-gifo-container active">
-                        <h2>Aquí podrás crear tus propios <span>GIFOS</span></h2>
-                        <p>¡Crea tu GIFO en sólo 3 pasos!</p>
-                        <p>(sólo necesitas una cámara para grabar un video)</p>
-                    </div>
-                    <div class="text-gifo-container">
-                        <h2>¿Nos das acceso a tu cámara?</h2>
-                        <p>El acceso a tu cámara será válido sólo por el tiempo en el que estés creando el GIFO</p>
-                    </div>
+                <div class="light-camera-container">
+                    <div class="light">
+                        <img id="light-animation" src="assets/element-luz-camara.svg" alt="Luz">
+                    </div>  
                 </div>
             </div>
 
-            <!--Capture-->
-            <div class="icon-numbers">
-                <h4 class="button-number">1</h4>
-                <h4 class="button-number">2</h4>
-                <h4 class="button-number">3</h4>
-                <h4 id="timer"></h4>
-                <h4 id="repeatGif">REPETIR CAPTURA</h4>
+            <!--Video Recording Rectangle-->
+            <div class="create-gifo-container">
+                <div class="text-gifo-container active">
+                    <h2>Aquí podrás crear tus propios <span>GIFOS</span></h2>
+                    <p>¡Crea tu GIFO en sólo 3 pasos!</p>
+                    <p>(sólo necesitas una cámara para grabar un video)</p>
+                </div>
+                <div class="text-gifo-container">
+                    <h2>¿Nos das acceso a tu cámara?</h2>
+                    <p>El acceso a tu cámara será válido sólo por el tiempo en el que estés creando el GIFO</p>
+                </div>
             </div>
-            <div class="bottom-bar"></div>
-        </div>
-        <div class="cinta-container">
-            <img id="rollo_pelicula" src="assets/pelicula.svg" alt="Pelicula">
-        </div>
     </section>
 
-    <!--Control section-->
-    <section class="control-section">
-        <button id="camera-iniciar">COMENZAR</button>
-        <button id="camera-grabar">GRABAR</button>
-        <button id="camera-finalizar">FINALIZAR</button>
-        <button id="gif-upload">SUBIR GIFO</button>
-    </section>
-    </main>
+            <!--Recording-->
+            <div class="numbers-container">
+                <div class="video-container">
+                    <div class="loading">
+                        <img src="assets/loader.svg" alt="Loader">
+                        <h3>Estamos subiendo tu GIFO</h3>
+                    </div>
+                    <div class="checkload-overlay">
+                        <div class="btn-load-container">
+                            <button><img src="assets/icon-download.svg" alt="Download"></button>
+                            <button><img src="assets/icon-link.svg" alt="Link"></button>
+                        </div>
+                        <img src="assets/check.svg" alt="Check">
+                        <h3>GIFO subido con éxito</h3>
+                    </div>
+                    <video id="video" class="gif-recorder" src="#"></video>
+                </div>
+
+                <!--Capture-->
+                <div class="icon-numbers">
+                    <h4 class="button-number">1</h4>
+                    <h4 class="button-number">2</h4>
+                    <h4 class="button-number">3</h4>
+                    <h4 id="timer"></h4>
+                    <h4 id="repeatGif">REPETIR CAPTURA</h4>
+                </div>
+                <div class="bottom-bar"></div>
+            </div>
+            <div class="cinta-container">
+                <img id="tape" src="assets/pelicula.svg" alt="Rollo de película">
+            </div>
+        
+
+        <!--Control section-->
+        <section class="control-section">
+            <button id="camera-iniciar">COMENZAR</button>
+            <button id="camera-grabar">GRABAR</button>
+            <button id="camera-finalizar">FINALIZAR</button>
+            <button id="gif-upload">SUBIR GIFO</button>
+        </section>
+        </main>
 
     <!--footer-->
     <footer>
