Numbers buttons and bar correct size

--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -93,7 +93,7 @@
     <footer>
         <section class="footer-container">
             <div class="share-container">
-                <h5> Compartir en:</h5>
+                <h5 class="footer-font"> Compartir en:</h5>
                 <div class="icon-container"></div>
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook-f" style="color:grey"></i></a>
                 <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter" style="color:grey"></i></a>
