numbers buttons in right position, aldo repetir captura correct size

--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -71,7 +71,7 @@
 
         <!--Trending-->
         <div class="trending__header">
-            <h3>Trending:</h3>
+            <h3 id="trending-font">Trending:</h3>
             <h4>Reactions, Entertainment, Sports, Stickers, Artists</h4>
         </div>
 
