--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <form class="search" id="search-form">
                 <input  type="text" class="search__text" id="search-input" placeholder="Busca GIFOS y más">
                 <button type="submit"  id="button__search"><a href="" class="button"><img src="assets/icon-search.svg" alt="Search"></a></button>
-             <!--   <ul id="search__list"></ul>  no se si me sive-->
             </form>
 
             <!--GIFOS results-->
             <div class="results" id="results">  
+                <div class="gral-button"><button class="button-format"><h3>VER MÁS</h3></button></div>
             </div>
         </div>
         <!--Trending-->
