--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -51,14 +51,13 @@
         
             <!--Video Recording Rectangle-->
             <div class="create-gifo-container">
-                <div class="text-gifo-container active">
-                    <h2>Aquí podrás crear tus propios <span>GIFOS</span></h2>
-                    <p>¡Crea tu GIFO en sólo 3 pasos!</p>
-                    <p>(sólo necesitas una cámara para grabar un video)</p>
-                </div>
                 <div class="text-gifo-container">
-                    <h2>¿Nos das acceso a tu cámara?</h2>
-                    <p>El acceso a tu cámara será válido sólo por el tiempo en el que estés creando el GIFO</p>
+                    <h2 id="main-msg">Aquí podrás <br>crear tus propios <span class="change__color">GIFOS</span></h2>
+                    <p id="create-subtitle">¡Crea tu GIFO en sólo 3 pasos! <br>(sólo necesitas una cámara para grabar un video)</p>
+                </div>
+                <div class="text-gifo-container-recording">
+                    <h2 >¿Nos das acceso a tu cámara?</h2>
+                    <p id="create-subtitle">El acceso a tu cámara será válido sólo por el tiempo en el que estés creando el GIFO</p>
                 </div>
             </div>
             
