--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
     -->
     </footer>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
