--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -129,6 +129,6 @@
     -->
     </footer>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
