--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -106,6 +106,6 @@
       <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>
     -->
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
