--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a class="menu__list--" href="#"><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="pages_creategif.html"><input type="image" id="botton__gifo--disappear" name="botton" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -44,12 +44,12 @@
         <div class="container_search">
             <form class="search" id="search-form">
                 <input  type="text" class="search__text" id="search-input" placeholder="Busca GIFOS y más">
-                <button type="submit"  id="button__search"><a href="" class="button"><img src="assets/icon-search.svg" alt="Search"></a></button>
+                <button href="" class="button" id="button__search"><img src="assets/icon-search.svg" alt="Search"></button>
             </form>
 
             <!--GIFOS results-->
             <div class="results" id="results">  
-                <div class="gral-button"><button class="button-format"><h3>VER MÁS</h3></button></div>
+                <div class="gral-button"><button id="button-format"><h3>VER MÁS</h3></button></div>
             </div>
         </div>
         <!--Trending-->
