--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="container_search">
             <form class="search" id="search-form">
                 <input  type="text" class="search__text" id="search-input" placeholder="Busca GIFOS y más">
-                <button href="" class="button" id="button__search"><img src="assets/icon-search.svg" alt="Search"></button>
+                <button class="button" id="button__search"><img src="assets/icon-search.svg" alt="Search"></button>
             </form>
 
             <!--GIFOS results-->
             <div class="results" id="results">  
-                <div class="gral-button"><button id="button-format"><h3>VER MÁS</h3></button></div>
+                <div class="gral-button" id="button-format"><h3>VER MÁS</h3></div>
             </div>
         </div>
         <!--Trending-->
@@ -66,9 +66,7 @@
                 <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
             </div>
             <!-- Slideshow container -->
-            <div class="slideshow-container">
-            </div>
-        </div>  
+            <div class="slideshow-container"></div>  
     </section>
     </main>
 
@@ -81,7 +79,6 @@
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook-f" style="color:grey"></i></a>
                 <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter" style="color:grey"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram" style="color:grey"></i></a>
-                </div>
             </div> 
             <p id="copyright"></p>    
         <div class="bar"></div>   
