HTML Validator ok

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram" style="color:grey"></i></a>
             </div> 
             <p id="copyright"></p>    
-        <div class="bar"></div>   
-      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>
-    -->
+            <div class="bar"></div>   
+      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>-->
+        </section>
     </footer>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="js/app.js"></script>
