--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -19,7 +19,7 @@
                     <li><a class="menu__list--" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="#">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="pages_creategif.html"><input type="image" id="botton__gifo--disappear" name="botton" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -35,7 +35,7 @@
     <main>
 
         <!--Favorites-->
-        <section id="section-fav-mygifs" class="galery"></section>
+        <div id="section-fav-mygifs" class="galery"></div>
         <section id="fav-mygifs_empty" class="no-fav-mygifs">
             <div class="fav-mygifs-empty-container">
                 <img id="icon-fav-sin-contenido" src="assets/icon-fav-sin-contenido.svg" alt="Favoritos sin contenido">
@@ -85,9 +85,8 @@
             </div>
             
             <!-- Slideshow container -->
-            <div class="slideshow-container">
-            </div>
-        </div>  
+            <div class="slideshow-container"></div>
+        </section>  
     </main>
     
     <!--footer-->
@@ -99,13 +98,13 @@
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook-f" style="color:grey"></i></a>
                 <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter" style="color:grey"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram" style="color:grey"></i></a>
-                </div>
             </div> 
             <p id="copyright"></p>    
-        <div class="bar"></div>   
-      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>
-    -->
+            <div class="bar"></div>   
+      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>-->
+        </section>
     </footer>
+    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
