html validator. Changed id repeated

--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -20,7 +20,7 @@
                     <li><a class="menu__list--" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="#"><input type="image" id="botton__gifo--disappear" name="botton" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="#"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -53,11 +53,11 @@
             <div class="create-gifo-container">
                 <div class="text-gifo-container">
                     <h2 id="main-msg">Aquí podrás <br>crear tus propios <span class="change__color">GIFOS</span></h2>
-                    <p id="create-subtitle">¡Crea tu GIFO en sólo 3 pasos! <br>(sólo necesitas una cámara para grabar un video)</p>
+                    <p class="create-subtitle">¡Crea tu GIFO en sólo 3 pasos! <br>(sólo necesitas una cámara para grabar un video)</p>
                 </div>
                 <div class="text-gifo-container-recording">
                     <h2 >¿Nos das acceso a tu cámara?</h2>
-                    <p id="create-subtitle">El acceso a tu cámara será válido sólo por el tiempo en el que estés creando el GIFO</p>
+                    <p class="create-subtitle">El acceso a tu cámara será válido sólo por el tiempo en el que estés creando el GIFO</p>
                 </div>
             </div>
             
@@ -70,9 +70,9 @@
                     <div id="num-bar-container">
                         <div class="num-repeat-container">
                             <div class="numbers-container">
-                                <button id="button-number"><h5 class="button-number-font">1</h5></button>
-                                <button id="button-number"><h5 class="button-number-font">2</h5></button>
-                                <button id="button-number"><h5 class="button-number-font">3</h5></button>
+                                <button class="button-number">1</button>
+                                <button class="button-number">2</button>
+                                <button class="button-number">3</button>
                             </div>
                             <h3 id="repeat-gif">REPETIR CAPTURA<span id="timer"></span></h3> 
                         </div>
