--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -31,6 +31,7 @@
     </header>
 
     <!--Main-->
+    <main>
         <section class="camera-display">
             <!--Camera Icon-->
             <div class="camera-container">
@@ -61,7 +62,7 @@
                 </div>
             </div>
             
-    </section>
+        </section>
      
             <!--Recording-->
             <div class="numbers-container">
@@ -104,13 +105,13 @@
     </div>
 
         <!--Control section-->
-        <section class="control-section">
+        <div class="control-section">
             <button id="camera-iniciar">COMENZAR</button>
             <button id="camera-grabar">GRABAR</button>
             <button id="camera-finalizar">FINALIZAR</button>
             <button id="gif-upload">SUBIR GIFO</button>
-        </section>
-        </main>
+        </div>
+    </main>
 
     <!--footer-->
     <footer>
@@ -121,12 +122,11 @@
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook-f" style="color:grey"></i></a>
                 <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter" style="color:grey"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram" style="color:grey"></i></a>
-                </div>
             </div> 
             <p id="copyright"></p>    
-        <div class="bar"></div>   
-      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>
-    -->
+            <div class="bar"></div>   
+      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>-->
+        </section>
     </footer>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="js/app.js"></script>
