Showed favorites and LocalStorage is working

--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -36,7 +36,7 @@
 
         <!--Favorites-->
         <div id="section-fav-mygifs" class="galery"></div>
-        <section id="fav-mygifs_empty" class="no-fav-mygifs">
+        <section id="fav-mygifs_empty" class="no-fav-mygifs hide">
             <div class="fav-mygifs-empty-container">
                 <img id="icon-fav-sin-contenido" src="assets/icon-fav-sin-contenido.svg" alt="Favoritos sin contenido">
                 <h2 id="default-msg">"¡Guarda tu primer GIFO en Favoritos <br>
