JS modules, icons in favorites. All the favorites in 4 columns.

--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -35,7 +35,9 @@
     <main>
 
         <!--Favorites-->
-        <div id="section-fav-mygifs" class="galery"></div>
+        <div class="galery"></div>
+        
+        <!--Favorites, default msg-->
         <section id="fav-mygifs_empty" class="no-fav-mygifs hide">
             <div class="fav-mygifs-empty-container">
                 <img id="icon-fav-sin-contenido" src="assets/icon-fav-sin-contenido.svg" alt="Favoritos sin contenido">
