--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
     </footer>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
