--- a/index.html
+++ b/index.html
@@ -67,7 +67,16 @@
             </div>
             <!-- Slideshow container -->
             <div class="slideshow-container"></div>  
-    </section>
+        </section>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-container">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+        </div>
     </main>
 
     <!--footer-->
@@ -90,5 +99,6 @@
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="js/app.js"></script>
     <script src="js/search.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 </html>
