--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -89,7 +89,15 @@
             <!-- Slideshow container -->
             <div class="slideshow-container"></div>
         </section>
+        <!-- The Modal -->
 
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-container">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+        </div>
     </main>
     
     <!--footer-->
@@ -109,5 +117,6 @@
     </footer>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 </html>
