Buttons create gif style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="checkbox" id="toggle" value="flag"/>
             <div class="menu">
                 <ul class="menu__list">
-                    <li><a class="menu__list--" href="#"><span>Modo Nocturno</span></a></li>
+                    <li><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
                     <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
