--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -73,11 +73,10 @@
         <div class="upload-message-done">
             <div id= "icons-layer-gifo">
                 <button class="icons-layer-gifo" onclick="clickDownload('${url}')"><img src="assets/icon-download.svg" alt="Descargar"></button>
-                <button class="icons-layer-gifo" link-button" onclick="clickLink()"><img src="assets/icon-link-normal.svg" alt="Link"></button>
+                <button class="icons-layer-gifo" link-button" onclick="copyToClipboard('${url}')"><img src="assets/icon-link-normal.svg" alt="Link"></button>
             </div> 
-                <div class="progress-icon"><img src="assets/check.svg" alt="Listo"></div>
-                <h2 class="upload-msg">GIFO Subido con éxito.</h2>
-            
+            <div class="progress-icon"><img src="assets/check.svg" alt="Listo"></div>
+            <h2 class="upload-msg">GIFO Subido con éxito.</h2> 
         </div> 
         </section>
      
