--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -35,40 +35,18 @@
     <main>
 
         <!--My Gifs-->
-        <div id="section-fav-mygifs" class="galery"></div>
-        <section id="fav-mygifs_empty" class="no-fav-mygifs">
+        <div class="galery"></div>
+
+
+
+       
+        <section id="mygifs_empty" class="no-fav-mygifs">
             <div class="fav-mygifs-empty-container">
                 <img id="icon-mygifs-sin-contenido" src="assets/icon-mis-gifos-sin-contenido.svg" alt="My GIFOS sin contenido">
                 <h2 id="default-msg">"¡Anímate a crear tu primer GIFO!"</h2>
             </div>
         </section>
         
-        <!--Popup
-        <div class="overlay" id="overlay">
-            <div class="popup">
-                <img class="close-popup" id="close_popup" src="assets/close.svg" alt="Close">
-                <section class="gif-max">ho
-                    <button onclick="slideMaximizedGif(-1)" class="button__back">
-                        &#60;
-                    </button>
-                    <img id="giphy__image" src="#" alt="#">
-                    <button onclick="slideMaximizedGif(+1)" class="button__forward">
-                        &#62;
-                    </button>
-                    <div class="inline-description">
-                        <div class="text-container">
-                            <h3 id="user_giphy_title">User</h3>
-                            <h2 id="giphy_title">Título GIFO</h2>
-                        </div>
-                        <div class="icon-giphy-container">
-                            <a href="" id="like"><img src="assets/icon-fav-active.svg" alt="Like"></a>
-                            <a target="_blank" href="" id="download" download><img src="assets/icon-download.svg" alt="Download"></a>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>-->
-
         <!--Trending-->
         <div class="trending__header">
             <h3 id="trending-font">Trending:</h3>
@@ -103,7 +81,7 @@
       <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>-->
         </section>
     </footer>
-    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/mygifos.js"></script>
+  
 </body>
 </html>
