--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -17,7 +17,7 @@
             <input type="checkbox" id="toggle" value="flag"/>
             <div class="menu">
                 <ul class="menu__list">
-                    <li><a class="menu__list--" href=""><span>Modo Nocturno</span></a></li>
+                    <li><a class="menu__list-- switch" id= "switch" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
                     <li><a class="menu__list--" href="#"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
@@ -72,8 +72,7 @@
         </div>
         <div class="upload-message-done">
             <div id= "icons-layer-gifo">
-                <button class="icons-layer-gifo" onclick="clickDownload('${url}')"><img src="assets/icon-download.svg" alt="Descargar"></button>
-                <button class="icons-layer-gifo" link-button" onclick="copyToClipboard('${url}')"><img src="assets/icon-link-normal.svg" alt="Link"></button>
+
             </div> 
             <div class="progress-icon"><img src="assets/check.svg" alt="Listo"></div>
             <h2 class="upload-msg">GIFO Subido con éxito.</h2> 
