--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -16,7 +16,7 @@
             <input type="checkbox" id="toggle" value="flag"/>
             <div class="menu">
                 <ul class="menu__list">
-                    <li><a class="menu__list--" href=""><span>Modo Nocturno</span></a></li>
+                    <li><a class="menu__list-- switch" id= "switch" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="#">Mis GIFOS</a></li>
                     <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
@@ -81,6 +81,7 @@
       <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>-->
         </section>
     </footer>
+
     <script src="js/mygifos.js"></script>
   
 </body>
