--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -77,19 +77,19 @@
     <!--footer-->
     <footer>
         <section class="footer-container">
-            <div class="share-container">
-                <h5 class="footer-font"> Compartir en:</h5>
-                <div class="icon-container"></div>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook-f" style="color:grey"></i></a>
-                <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter" style="color:grey"></i></a>
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram" style="color:grey"></i></a>
-            </div> 
-            <p id="copyright"></p>    
-            <div class="bar"></div>   
-      <!--  <div class="footer"><h5 id="copyright">© GIFOS 2020 All Rights Reserved.</h5></div>-->
+            <div class="media-container">
+                <div class="icon-container">
+                    <h5 class="footer-font"> Compartir en:</h5>
+                    <div id="icons">
+                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f social-media"></i></a>
+                        <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter social-media"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fab fa-instagram social-media"></i></a>
+                    </div>
+                </div> 
+            <div class="copyright"><h5 class="footer-font" id="copyright">© GIFOS 2021 All Rights Reserved.</h5></div>
         </section>
     </footer>
-   
+    <hr>
     <script src="js/app.js"></script>
     <script src="js/modal.js"></script>
 </body>
