revised js files. Hover and active buttons on navbar

--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -19,7 +19,7 @@
                     <li><a class="menu__list--" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="#">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear"  src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" onmouseup="this.src = 'assets/CTA-crear-gifo-active.svg';" alt="Crear GIF"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -90,7 +90,9 @@
         </section>
     </footer>
     <hr>
-    <script src="js/app.js"></script>
+    <script src="js/favorites.js"></script>
+    <script src="js/trending.js"></script>
+    
     <script src="js/modal.js"></script>
 </body>
 </html>
