--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -19,7 +19,7 @@
                     <li><a class="menu__list-- switch" id= "switch" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="#">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear"  src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" onmouseup="this.src = 'assets/CTA-crear-gifo-active.svg';" alt="Crear GIF"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -83,6 +83,7 @@
     </footer>
     <hr>
     <script src="js/mygifos.js"></script>
+    <script src="js/trending.js"></script>
   
 </body>
 </html>
