--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -20,7 +20,7 @@
                     <li><a class="menu__list-- switch" id= "switch" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="#"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="#"><img id="botton__gifo--disappear"  src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" onmouseup="this.src = 'assets/CTA-crear-gifo-active.svg';" alt="Crear GIF"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
