--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <hr>
     
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/trending.js"></script>
     <script src="js/search.js"></script>
     <script src="js/modal.js"></script>
 </body>
