--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--Main-->
     <main class="main__content">
         <div class="title"> <!--titulos_header-->
-            <h1 id="title__color">Inspírate, busca, guarda, y crea <span id="break__desktop">los mejores<span class="change__color"> GIFOS</span></span></h1>
+            <h1 class="title__color">Inspírate, busca, guarda, y crea <span id="break__desktop">los mejores<span class="change__color"> GIFOS</span></span></h1>
         </div>
         <div class="container">
             <img class="container__photo" src="assets/ilustra_header.svg" alt="Family Image">
