night mode almost done!

--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c1d53aba1c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/favorites.css">
+    <link rel="stylesheet" id="dark" href="style/favorites.css">
     <title>Favoritos</title>
 </head>
 <body class="body">
@@ -16,7 +16,7 @@
             <input type="checkbox" id="toggle" value="flag"/>
             <div class="menu">
                 <ul class="menu__list">
-                    <li><a class="menu__list--" href=""><span>Modo Nocturno</span></a></li>
+                    <li><a class="menu__list-- switch" id= "switch" href=""><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="#">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
                     <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear"  src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" onmouseup="this.src = 'assets/CTA-crear-gifo-active.svg';" alt="Crear GIF"></a></li>
