--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c1d53aba1c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" id="dark" href="style/style.css">
     <title>GIFOS</title>
 </head>
 
@@ -72,11 +72,11 @@
         <!-- The Modal -->
 
         <div id="myModal" class="modal">
-            <!-- Modal content -->
+            <!-- Modal content
             <div class="modal-container">
                 <span class="close">&times;</span>
                 <p>Some text in the Modal..</p>
-            </div>
+            </div> -->
         </div>
         
     </main>
