modal trending almost done. Close button works!

--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
         <!-- The Modal -->
 
         <div id="myModal" class="modal">
-            <!-- Modal content
+            <span class="close" onclick="showModal()">&times;</span>
+            <!-- Modal content-->
             <div class="modal-container">
-                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
-            </div> -->
+            </div> 
         </div>
         
     </main>
