--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -64,6 +64,16 @@
             <!-- Slideshow container -->
             <div class="slideshow-container"></div>
         </section>  
+        <!-- The Modal -->
+
+        <div id="myModal" class="modal">
+            <span class="close" onclick="showModal()">&times;</span>
+            <!-- Modal content-->
+            <div class="modal-container">
+            </div> 
+        </div>
+
+
     </main>
     
     <!--footer-->
@@ -84,6 +94,7 @@
     <hr>
     <script src="js/mygifos.js"></script>
     <script src="js/trending.js"></script>
+    <script src="js/modal.js"></script>
   
 </body>
 </html>
