--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -63,14 +63,14 @@
             <!-- Slideshow container -->
             <div class="slideshow-container"></div>
         </section>
+        
         <!-- The Modal -->
 
         <div id="myModal" class="modal">
-            <!-- Modal content -->
+            <span class="close" onclick="showModal()">&times;</span>
+            <!-- Modal content-->
             <div class="modal-container">
-                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
-            </div>
+            </div> 
         </div>
     </main>
     
