style button "create Gifo" + search function (pagination) + nightmode in favorites (improvement) + close button searchBar + searchBar change when input exist.

--- a/pages_creategif.html
+++ b/pages_creategif.html
@@ -10,7 +10,8 @@
 
 <body class="body">
     <header>
-    <hr>
+    <hr class="blue-line">
+
     <!--navbar-->
         <div class="nav">
             <a class="link-home" href="index.html"><img id="logo" class="logo" src="assets/logo-desktop.svg" alt="logo"></a> 
@@ -20,7 +21,8 @@
                     <li><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
                     <li><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="#"><img id="botton__gifo--disappear"  src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" onmouseup="this.src = 'assets/CTA-crear-gifo-active.svg';" alt="Crear GIF"></a></li>
+                    <li><a class="menu__list--" href="#"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" alt="Crear GIF" onmouseleave="this.src = 'assets/button-crear-gifo.svg' " onmousedown="this.src = 'assets/CTA-crear-gifo-active.svg';"></a></li>
+                    
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -132,7 +134,7 @@
         </section>
     </footer>
 
-    <hr>
+    <hr class="blue-line">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
     <script src="js/creategif.js"></script>
 </body>
