starting mobile. Create gif W3 check done.

--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -75,8 +75,8 @@
         </div>
     </main>
     
-    <!--footer-->
-    <footer>
+     <!--footer-->
+     <footer>
         <section class="footer-container">
             <div class="media-container">
                 <div class="icon-container">
@@ -87,9 +87,11 @@
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram social-media"></i></a>
                     </div>
                 </div> 
-            <div class="copyright"><h5 class="footer-font" id="copyright">© GIFOS 2021 All Rights Reserved.</h5></div>
+                <div class="copyright"><h5 class="footer-font" id="copyright">© GIFOS 2021 All Rights Reserved.</h5></div>
+            </div>
         </section>
     </footer>
+    
     <hr class="blue-line">
     <script src="js/favorites.js"></script>
     <script src="js/trending.js"></script>
