--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -89,9 +89,11 @@
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram social-media"></i></a>
                     </div>
                 </div> 
-            <div class="copyright"><h5 class="footer-font" id="copyright">© GIFOS 2021 All Rights Reserved.</h5></div>
+                <div class="copyright"><h5 class="footer-font" id="copyright">© GIFOS 2021 All Rights Reserved.</h5></div>
+            </div>
         </section>
     </footer>
+
     <hr class="blue-line">
     <script src="js/mygifos.js"></script>
     <script src="js/trending.js"></script>
