--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul class="menu__list">
                     <li class="list-nav"><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
                     <li class="list-nav"><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
-                    <li class="list-nav"><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
+                    <li class="list-nav"><a class="menu__list-- wider" href="pages_mygifs.html">Mis GIFOS</a></li>
                     <li class="list-nav"><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" alt="Crear GIF" onmouseleave="this.src = 'assets/button-crear-gifo.svg' " onmousedown="this.src = 'assets/CTA-crear-gifo-active.svg';"></a></li>
                 </ul>
             </div>
