--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -17,10 +17,10 @@
             <input type="checkbox" id="toggle" value="flag"/>
             <div class="menu">
                 <ul class="menu__list">
-                    <li><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
-                    <li><a class="menu__list--" href="#">Favoritos</a></li>
-                    <li><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" alt="Crear GIF" onmouseleave="this.src = 'assets/button-crear-gifo.svg' " onmousedown="this.src = 'assets/CTA-crear-gifo-active.svg';"></a></li>
+                    <li class="list-nav"><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
+                    <li class="list-nav"><a class="menu__list--" href="#">Favoritos</a></li>
+                    <li class="list-nav"><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
+                    <li class="list-nav"><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" onmouseover="this.src = 'assets/CTA-crear-gifo-hover.svg';" alt="Crear GIF" onmouseleave="this.src = 'assets/button-crear-gifo.svg' " onmousedown="this.src = 'assets/CTA-crear-gifo-active.svg';"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
