--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          
         <!--Trending-->
         <div class="trending__header">
-            <h3 class="trending-font">Trending:</h3>
+            <h3 id="trending-font">Trending:</h3>
             <h4 id="trending-topics">Reactions, Entertainment, Sports, Stickers, Artists</h4>
         </div>
 
