search bar working. User and title hover done.

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 <button type="submit" class="button" id="button__search"><i class="fas fa-search"></i></button>
                 <button class="button" id="button__exs"><i class="fas fa-times"></i></button> 
             </form>
-        </div>
-
-        <!--GIFOS autocomplete-->
-        <div class="autocomplete" id="autocomplete">  
-            <div id="list-auto"> 
+            
+            <!--GIFOS autocomplete-->
+            <div class="autocomplete" id="autocomplete" style="display:none;">  
+                <div id="list-auto" style="margin-bottom: 15px;">
+                </div>
             </div>
         </div>
-        
+
         <!--GIFOS results-->
         <div class="results" id="results">    
         </div>
