search and nightmode updates

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 </div>
             </div>
         </div>
+        <!--Gray line + Title-->
+        <div id="header-results">   
+        </div>
+
 
         <!--GIFOS results-->
         <div class="results" id="results">    
