error message, hovers, and others

--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -38,7 +38,7 @@
         </div>
         
         <!--My gifos, default msg-->
-        <section id="mygifs_empty" class="no-fav-mygifs">
+        <section id="mygifs_empty" class="no-fav-mygifs hide">
             <div class="fav-mygifs-empty-container">
                 <img id="icon-mygifs-sin-contenido" src="assets/icon-mis-gifos-sin-contenido.svg" alt="My GIFOS sin contenido">
                 <h2 id="default-msg">"¡Anímate a crear tu primer GIFO!"</h2>
