--- a/pages_favorites.html
+++ b/pages_favorites.html
@@ -21,7 +21,7 @@
                     <li class="list-nav"><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
                     <li class="list-nav"><a class="menu__list--" href="#">Favoritos</a></li>
                     <li class="list-nav"><a class="menu__list--  wider" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li class="list-nav"><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg"></a></li>
+                    <li class="list-nav"><a class="menu__list--" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear Gif"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
