--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li class="list-nav"><a class="menu__list-- switch" id= "switch" href="#"><span>Modo Nocturno</span></a></li>
                     <li class="list-nav"><a class="menu__list--" href="pages_favorites.html">Favoritos</a></li>
                     <li class="list-nav"><a class="menu__list--" href="pages_mygifs.html">Mis GIFOS</a></li>
-                    <li class="list-nav"><a class="menu__list-- wider" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg"></a></li>
+                    <li class="list-nav"><a class="menu__list-- wider" href="pages_creategif.html"><img id="botton__gifo--disappear" src="assets/button-crear-gifo.svg" alt="Crear Gif"></a></li>
                 </ul>
             </div>
             <label id="hamburger" for="toggle" class="menu2">
@@ -67,8 +67,8 @@
         <div id="header-results">   
         </div>
 
-
         <!--GIFOS results-->
+        
         <div class="results" id="results">    
         </div>
         <button id="button-more" onclick="next();">VER MAS</button>
