--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <form autocomplete="off" class="search"  id="search-form">
                 <input  type="text" class="search__text" id="search-input" placeholder="Busca GIFOS y más"><span id="second__search"><button type="submit" class="submit"><i id= "sec__search" class="fas fa-search"></i></button></span>
-                <button type="submit" class="button" id="button__search"><img src="assets/icon-search.svg" alt="Buscar"></button>
+                <button class="button" id="button__search"><img src="assets/icon-search.svg" alt="Buscar"></button>
                 <button class="button" id="button__exs"><img id="exs__size" src="assets/close.svg" alt="Cerrar"></button> 
             </form>
             
@@ -77,7 +77,7 @@
         <section class="trending">
             <div class="trending__gifs">
                 <h2 id="title__trending">Trending GIFOS</h2>
-                <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
+                <h5 id="trending__description">Mira los últimos GIFOS de nuestra comunidad.</h5>
             </div>
             <!-- Slideshow container -->
             <div class="slideshow-container"></div>  
