--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -61,7 +61,7 @@
         <section class="trending">
             <div class="trending__gifs">
                 <h2 id="title__trending">Trending GIFOS</h2>
-                <h5 id="trending__description">Mira los últimos GIFO de nuestra comunidad.</h5>
+                <h5 id="trending__description">Mira los últimos GIFOS de nuestra comunidad.</h5>
             </div>
 
             <!-- Slideshow container -->
