trending topics style and searching functionality.

--- a/pages_mygifs.html
+++ b/pages_mygifs.html
@@ -53,7 +53,7 @@
         <!--Trending-->
         <div class="trending__header">
             <h3 id="trending-font">Trending:</h3>
-            <h4>Reactions, Entertainment, Sports, Stickers, Artists</h4>
+            <h4 id="trending-topics">Reactions, Entertainment,<span id="break__mobile">Sports, Stickers, Artists</span></h4>
         </div>
 
         <!--Trending and slider-->
